tools/biome/plugins/api-architecture/fixtures/no-dto-inter-module-import/rejected/libs/api/example-dto/test/rejected.ts
export * from '@shipfox/a-dto/inter-module/all';
export {client} from '@shipfox/a-dto/inter-module/export';
export type {Client} from '@shipfox/a-dto/inter-module/export-types';
